estilos del login

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -2,3 +2,7 @@
 
 @import './base/settings';
 @import './base/base';
+
+// Components
+@import './components/auth';
+@import './components//buttons';
