--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -16,18 +16,18 @@ main {
 }
 
 .mt-1 {
-	margin: 5px;
+	margin-top: 5px;
 }
 .mt-5 {
 	margin-top: 20px;
 }
 
 .mb-1 {
-	margin: 5px;
+	margin-bottom: 5px;
 }
 
 .mb-5 {
-	margin-top: 20px;
+	margin-bottom: 20px;
 }
 
 .pointer {
