--- a/src/styles/components/_notes.scss
+++ b/src/styles/components/_notes.scss
@@ -1,10 +1,9 @@
 /** @format */
 
-.nothing__main-content {
+.notes__main-content {
 	display: flex;
 	flex-direction: column;
 	height: 100%;
-	min-height: 50vh;
 }
 
 .notes__appbar {
