--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -5,7 +5,7 @@
 
 // Components
 @import './components/auth';
-@import './components//buttons';
+@import './components/buttons';
 @import './components/links';
 @import './components/journal';
 @import './components/nothing';
