borrar una nota

--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -36,6 +36,16 @@
 	width: 100%;
 }
 
+.btn-danger {
+	background-color: red;
+
+	transition: background-color 0.3s ease;
+
+	&:hover {
+		background-color: darken($color: red, $amount: 10);
+	}
+}
+
 .google-btn {
 	cursor: pointer;
 	margin-top: 5px;
